Refactor: Switch to portrait CRT effect, update index.html and cleanup

--- a/index.html
+++ b/index.html
@@ -91,8 +91,15 @@ float hash(vec2 p) {
 
 vec2 barrel(vec2 uv, float k) {
   vec2 p = uv * 2.0 - 1.0;
+  
+  // Flip the fisheye to be portrait (on Y axis) by correcting for aspect ratio
+  float aspect = u_res.x / u_res.y;
+  p.x *= aspect;
+  
   float r2 = dot(p, p);
   p *= 1.0 + k * r2;
+  
+  p.x /= aspect;
   return p * 0.5 + 0.5;
 }
 
@@ -166,6 +173,8 @@ void main() {
 
   // Vignette + edge darkening (film/photo of CRT)
   vec2 p = uv * 2.0 - 1.0;
+  float aspect = u_res.x / u_res.y;
+  p.x *= aspect;
   float r2 = dot(p, p);
   float vig = 1.0 - 0.30 * r2;
   vig *= smoothstep(1.05, 0.55, r2); // stronger corners
